--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,121 @@
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579840803050%22%3A%22S1msNOxi%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.020Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "sb",
+        "value": "jOGuaCWKUU7gOiW3ff5mBY-w",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "dpr",
+        "value": "3.2708547115325928",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579895670201%3ARiOYqtg3ZY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "datr",
+        "value": "8YawaM4ZpnmO4p-uSoUL089U",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "wd",
+        "value": "891x1780",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579840803050",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "xs",
+        "value": "15%3Ax7TlpjR9Ls7jFw%3A2%3A1756445978%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "oo",
+        "value": "v1%7C3%3A1756445979",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1756445984534%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-29T05:39:47.021Z",
+        "lastAccessed": "2025-08-29T05:39:47.021Z"
+    }
+]
+
 
